# daemonize

./: CMakeLists.txt  README
lib/test/: CMakeLists.txt  log.c  log.h  main.c
src/: daemonize.c  daemonize.h
src/include/: daemonize.h
